# cpp-funny-endpoints

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml
.github/workflows/: ci.yml
cmake/: deps.cmake  opts.cmake
console/: CMakeLists.txt
console/source/: console.cpp
k8s/: README.md
k8s/gcp/: README.md  create_deploy_file.sh
k8s/kind/: README.md  deploy.yaml
source/: CMakeLists.txt  ClientImpl.cpp  ClientImpl.h  Funny.cpp  Funny.h  IClient.h  IServer.h  ServerImpl.cpp  ServerImpl.h  Service.cpp  Service.h
test/: CMakeLists.txt
test/source/: test_funny.cpp  test_not_found.cpp  test_service.cpp  test_service_failure.cpp
test/source/mocks/: ClientMock.h  ServerMock.h
